Removed the entire spring-security-client-test module, as it is no longer in use